@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.455 2005/12/13 22:52:21 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.456 2005/12/14 15:04:22 rocket Exp $
+
+  14 Dec 2005; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  Add envscript warning to aid users who may not know what they are doing
 
   13 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
   examples/generic_stage_template.spec:
